--- a/Noonian.xcodeproj/xcshareddata/xcschemes/noonian.xcscheme
+++ b/Noonian.xcodeproj/xcshareddata/xcschemes/noonian.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "3BBD8B591DC823AF00EB7A35"
                BuildableName = "noonian.app"
                BlueprintName = "noonian"
-               ReferencedContainer = "container:noonian.xcodeproj">
+               ReferencedContainer = "container:Noonian.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -34,9 +34,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "3BBD8B681DC823AF00EB7A35"
-               BuildableName = "noonianTests.xctest"
-               BlueprintName = "noonianTests"
-               ReferencedContainer = "container:noonian.xcodeproj">
+               BuildableName = "NoonianTests.xctest"
+               BlueprintName = "NoonianTests"
+               ReferencedContainer = "container:Noonian.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -46,7 +46,7 @@
             BlueprintIdentifier = "3BBD8B591DC823AF00EB7A35"
             BuildableName = "noonian.app"
             BlueprintName = "noonian"
-            ReferencedContainer = "container:noonian.xcodeproj">
+            ReferencedContainer = "container:Noonian.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -69,7 +69,7 @@
             BlueprintIdentifier = "3BBD8B591DC823AF00EB7A35"
             BuildableName = "noonian.app"
             BlueprintName = "noonian"
-            ReferencedContainer = "container:noonian.xcodeproj">
+            ReferencedContainer = "container:Noonian.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -88,7 +88,7 @@
             BlueprintIdentifier = "3BBD8B591DC823AF00EB7A35"
             BuildableName = "noonian.app"
             BlueprintName = "noonian"
-            ReferencedContainer = "container:noonian.xcodeproj">
+            ReferencedContainer = "container:Noonian.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
