Rename to CommandTask. Test init with strings and arrays.

--- a/Noonian.xcodeproj/xcshareddata/xcschemes/Noonian.xcscheme
+++ b/Noonian.xcodeproj/xcshareddata/xcschemes/Noonian.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:Noonian.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3B4114AA1DCB993000709803"
+               BuildableName = "NoonianKit.framework"
+               BlueprintName = "NoonianKit"
+               ReferencedContainer = "container:Noonian.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
